# nbse-analysis

./: .gitattributes  .gitignore  benchmark_nbse.py  pyproject.toml
nbse_analysis/: __init__.py  analyse.py  analysis.sql  benchmark_nbse.py  benchmark_results.csv  benchmark_results_old.csv  chem.py  investigate.ipynb  list.py  nbse_sets.csv  pics.ipynb  plots.ipynb  results_mcs.csv
