[tool.poetry]
name = "nbse-analysis"
version = "0.1.0"
description = ""
authors = ["Niklas Paulicks <paulicks@justtrack.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rdkit = "^2023.9.2"
jupyter = "^1.0.0"
plotnine = "^0.12.4"
pandas = "^2.2.0"
scikit-learn = "^1.4.0"
plydata = "^0.4.3"
rtoml = "^0.10.0"
scikit-misc = "^0.3.1"
pyperclip = "^1.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
